tests/scripts/parse_errors/wrong_comment.roto
// This is not a comment!
